src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-71.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units v=percent\")"
---
items:
  - loc: "#units v=percent"
    locs:
      directive: "#units"
    options:
      - loc: v=percent
        locs:
          option: v
          unit: percent
        option: FrontsightInclinationUnit
        unit: Percent
    type: UnitsDirective
