src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-72.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units v=blargh\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units v=blargh"
        locs:
          directive: "#units"
        options:
          - INVALID:
              loc: v=blargh
              locs:
                option: v
                unit: blargh
              option: FrontsightInclinationUnit
              unit: blargh
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EINVALIDINCLINATIONUNIT
    loc: blargh
    message: Invalid inclination unit
    severity: Error
