src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-73.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units vb\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units vb"
        locs:
          directive: "#units"
        options:
          - INVALID:
              locs:
                option: vb
              option: BacksightInclinationUnit
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EMISSINGVALUE
    loc: ""
    message: Missing =
    severity: Error
