src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-75.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units vb=d\")"
---
items:
  - loc: "#units vb=d"
    locs:
      directive: "#units"
    options:
      - loc: vb=d
        locs:
          option: vb
          unit: d
        option: BacksightInclinationUnit
        unit: Degrees
    type: UnitsDirective
