src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-77.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units vb=g\")"
---
items:
  - loc: "#units vb=g"
    locs:
      directive: "#units"
    options:
      - loc: vb=g
        locs:
          option: vb
          unit: g
        option: BacksightInclinationUnit
        unit: Grads
    type: UnitsDirective
