src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-78.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units vb=grads\")"
---
items:
  - loc: "#units vb=grads"
    locs:
      directive: "#units"
    options:
      - loc: vb=grads
        locs:
          option: vb
          unit: grads
        option: BacksightInclinationUnit
        unit: Grads
    type: UnitsDirective
