src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-79.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units vb=m\")"
---
items:
  - loc: "#units vb=m"
    locs:
      directive: "#units"
    options:
      - loc: vb=m
        locs:
          option: vb
          unit: m
        option: BacksightInclinationUnit
        unit: Mils
    type: UnitsDirective
