src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-8.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units order=ad\")"
---
items:
  - loc: "#units order=ad"
    locs:
      directive: "#units"
    options:
      - loc: order=ad
        locs:
          option: order
          order: ad
        option: CompassAndTapeOrder
        order:
          - Azimuth
          - Distance
    type: UnitsDirective
