src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-80.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units vb=mils\")"
---
items:
  - loc: "#units vb=mils"
    locs:
      directive: "#units"
    options:
      - loc: vb=mils
        locs:
          option: vb
          unit: mils
        option: BacksightInclinationUnit
        unit: Mils
    type: UnitsDirective
